edited the section about covid-19 insights

--- a/CV.Rmd
+++ b/CV.Rmd
@@ -8,7 +8,7 @@ title: "Resume"
 * Own the end-to-end analysis of the effects of life sciences marketing on health behaviors by leveraging a comprehensive data network through Crossix’s privacy-safe technology.
 * Responsible for reviewing project deliverables for newer analysts as well as providing guidance on technical, conceptual, and communciation-related processes.
 * Lead the development of Spotfire visualization dashboards, improved agile project management systems, and more efficient troubleshooting/bug-tracking workflows.
-* To write a blog series providing insight into the impact of COVID-19 on marketing trends, work with marketing team members, analtyical product developers, product strategy directors to ingest, explore, and package data for insights into the impact of COVID-19 on marketing trends.
+* To write a blog series providing insight into the impact of COVID-19 on marketing trends, work with marketing team members, analtyical product developers, product strategy directors to ingest, explore, and visualize data.
  
 ### Digital Health 
 
