--- a/CV.Rmd
+++ b/CV.Rmd
@@ -6,9 +6,9 @@ title: "Resume"
 
 #### Crossix, A Veeva Company | Lead Marketing Data Analyst | June 2019 - Present
 * Own the end-to-end analysis of the effects of life sciences marketing on health behaviors by leveraging a comprehensive data network through Crossix’s privacy-safe technology.
-* Responsible for reviewing project deliverables for newer analysts as well as providing guidance on technical, conceptual, and communication-related processes.
+* Responsible for reviewing project deliverables for newer analysts, as well as for providing guidance on technical, conceptual, and communication-related processes.
 * Lead the development of Spotfire visualization dashboards, improved agile project management systems, and more efficient troubleshooting/bug-tracking workflows.
-* To write a blog series providing insight into the impact of COVID-19 on marketing trends, work with marketing team members, analytical product developers, product strategy directors to ingest, explore, and visualize data.
+*For industry thought leadership posts providing insight into the impact of COVID-19 on marketing trends, collaborate with marketing team members, analytical product developers, and product strategy directors to ingest, explore, and visualize data.
  
 ### Digital Health 
 
@@ -47,13 +47,13 @@ title: "Resume"
 ### Hackathons
 
 #### Open Climate Collabathon 2019 | [Consumer Disclosure Team](https://collabathon-docs.openclimate.earth/hacks/team-contributions/consumer-disclosure-and-sustainable-supply-chains) | Dec. 2019
-*	Winner of the Community Choice award and the Most Innovative Contribution Award
+*	Winner of the Community Choice award and the Most Innovative Contribution Award.
 *	Outlined a framework for developing and reporting a "sustainability score" that would be used to grade the supply chain of a consumer product. The team also developed a proof-of-concept widget that could be added as a browser extension to report these scores on consumer websites.
 *	Contributed to the writing of the overarching framework and helped generate an example of an application for the project (the iPhone). 
-*	Joined the 2020 discussions to help facilitate project management and next steps for future Collabathons
+*	Joined the 2020 discussions to help facilitate project management and next steps for future Collabathons.
 
 #### Mount Sinai Health Hackathon 2019 | Team Blackbox AI | Oct. 2019
-*	Designed and created a website that uses video lessons, interactive statistical graphs, and written descriptions to educate clinicians on the application and interpretation of artificial intelligence in healthcare settings
+*	Designed and created a website that uses video lessons, interactive statistical graphs, and written descriptions to educate clinicians on the application and interpretation of artificial intelligence in healthcare settings.
 *	Brainstormed project execution and wrote HTML in Dash to create a functioning mock-up of the website (domain no longer active).
 
 #### Datakind + Microsoft Virtual DataDive: Applying AI to Societal Challenges in US Cities | Miami Project | Oct. 2019
