--- a/index.Rmd
+++ b/index.Rmd
@@ -8,9 +8,9 @@ title: "Bryce Wong"
 
 ### About Bryce (she/her/hers):
 
-MPH graduate and current data analyst at Crossix -  passionate about the social dynamics of public health, technology, and data.
+Current data analyst at Crossix and passionate about the responsible use of data science to solve the toughest problems facing society.
 
-My thesis explores the ethical implications of big data for public health. I propose the use of qualitative research methods to investigate:
+My graduate thesis explored the ethical implications of big data for public health. I proposed the use of qualitative research methods to investigate:
 
   * The perceptions and agendas influencing biostatisticians and data scientists working in this field
   * How data infrastructures are designed and managed for health technology
