--- a/index.Rmd
+++ b/index.Rmd
@@ -23,6 +23,7 @@ See my [resume here](CV.html)
 ### Selected Projects:
 
   * [Data Science for Public Health](Final_Report.html) (Team Project)
+  * [Open Climate Collabathon 2019](https://collabathon-docs.openclimate.earth/hacks/team-contributions/consumer-disclosure-and-sustainable-supply-chains)
   * While you're in NYC, [eat here not there](dashboard_template.html) 
 
 </p>
