--- a/Projects.Rmd
+++ b/Projects.Rmd
@@ -9,6 +9,13 @@ title: "Projects"
     * Motivated by Governor Cuomo’s initiative for ending the AIDS epidemic in New York State by 2020 (ETE 2020), we aimed to identify key vulnerable populations in New York City (NYC) disproportionately burdened by HIV/AIDS in order to improve interventions implemented under this initiative. 
     * To that end, we utilized annual HIV/AIDS reports from NYC through the NYC Open Data database, as well as supplementary NYC geographic information. Our analyses focusrf on exploring potential health disparities across geographic and sociodemographic variables as well as understanding the current trends for HIV/AIDS across time and in relation to comorbidities, in order to understand the current state and effectiveness of HIV/AIDS interventions in NYC.
     
+  * [Open Climate Collabathon 2019](https://collabathon-docs.openclimate.earth/hacks/team-contributions/consumer-disclosure-and-sustainable-supply-chains)
+    * I was a member of the Consumer Disclosure team (winner of the Most Innovative Contribution award), with my main involvement being the research and design of a framework that could support a "Sustainability Score" for online marketplaces.
+    * I worked with a cross-disciplinary group (all remoting in from around the world) and eventually reconnected with several team members to help launch/guide the next iteration of consumer-focused projects in the 2020 Collabathon.
+    * The scope and output of this project are documented on the Collabathon's gitbook (linked above).
+
     
   * While you're in NYC, [eat here not there](dashboard_template.html) 
     * A dashboard created using flexdashboard to let you know how restaurants in NYC are keeping up with health regulations.
+    
+  
