--- a/index.Rmd
+++ b/index.Rmd
@@ -2,9 +2,9 @@
 title: "Bryce Wong"
 ---
 
-<p>
-
 <img src="images/profile.jpg" style="width:35%; margin-right: 50px" align="left">
+
+<p align="right">
 
 ### About Bryce (she/her/hers):
 
@@ -19,12 +19,13 @@ My graduate thesis explored the ethical implications of big data for public heal
 If you want to reach out and talk more about anything on this site that interests you, you can email me at: <brycew.hello@gmail.com>
 
 See my [resume here](CV.html)
-
+ 
 ### Selected Projects:
 
-  * [Data Science for Public Health](Final_Report.html) (Team Project)
-  * [Open Climate Collabathon 2019](https://collabathon-docs.openclimate.earth/hacks/team-contributions/consumer-disclosure-and-sustainable-supply-chains)
-  * While you're in NYC, [eat here not there](dashboard_template.html) 
+  * [Microsoft + DataKind AI in Cities Virtual DataDive](https://www.datakind.org/blog/applying-ai-to-societal-challenges-in-cities-communities-highlights-from-datakinds-virtual-datadive)
+  * [Exploratory Data Analysis of Text Comments on a Web-Based Health Comic](webtoons analysis june 12.html)
+    * Plus how I created a [text data scraping algorithm](Webtoon_Comments.html)
+  * [Assessing HIV/AIDS Trends and Disparities in NYC](Final_Report.html) 
 
 </p>
 
