Updating links in projects page

--- a/Projects.Rmd
+++ b/Projects.Rmd
@@ -15,9 +15,9 @@ output:
   
 ### Analyzing the Comments on a Web-Based Health Comic
 
-  * Exploring the comments section for a health comic developed by the NYSDOH AIDS Institute (this will be a link to one of the later reports that I created)
+  * [Exploring the comments section for a health comic developed by the NYSDOH AIDS Institute](webtoons analysis june 12.html)
     * <b>Goal</b>: The New York State Department of Health’s AIDS Institute created a web-based health comic to educate young readers about HIV/AIDS, STIs, drug user health, and LGBTQ+ health. The web forum that the comic was hosted on allowed readers to interact with the series, either through commenting, liking, or following. I wanted to collect and explore that reader interaction data to see if we could discover insights into what content resonated with readers, what the major topics in the discussions between readers were, and how the comic performed over time.
-    * <b>What we did</b>: Using R, I learned how to write functions that could scrape web data from the comic forum (you can read through my process here - this will be a link to the formulas that I created). I then did exploratory data analysis of the quantitative metrics in the data (i.e. the number of likes per episode, the number of comments per episode, the average frequency of comments per user, etc.). I also began a qualitative analysis of the comment text data, iteratively building a codebook to identify key themes among the comments.
+    * <b>What we did</b>: Using R, I learned how to write functions that could scrape web data from the comic forum (you can read through my process [here](Webtoon_Comments.html)). I then did exploratory data analysis of the quantitative metrics in the data (i.e. the number of likes per episode, the number of comments per episode, the average frequency of comments per user, etc.). I also began a qualitative analysis of the comment text data, iteratively building a codebook to identify key themes among the comments.
     * <b>Findings</b>: I produced several reports of the quantitative data analysis, using tidyverse and ggplot in R to pull out visualizations and aggregations of the data after every updated data scrape (example report linked above). I also explored basic sentiment analysis using TidyText. These reports were shared with the leadership team for the Digital Health Initiatives at the AIDS Institute to help guide the creation of further plot arcs.
     
 ### Using Plot.ly to Visualize HIV/AIDS Trends in NYC
