--- a/CV.Rmd
+++ b/CV.Rmd
@@ -9,18 +9,18 @@ output:
 ### Data 
 
 #### Level | Data Scientist | February 2021 - Present
-*	Perform ad hoc analyses with SQL and BI tools using a diverse range of data sets, including EDI dental claims data, card transaction data, Segment data from web and mobile apps, and bi-temporal ledger data. 
-*	Partner with engineering to use data in driving new product features, to collect system requirements from a data modeling perspective, and to design user stories that inform test cases.
-*	Develop, test and maintain custom ETLs and dbt models for analytical use cases, including using Python scripts and Jinja macros in transforming and documenting data. Deep experience with data wrangling nested JSON blobs outputted from protobuf messages into BigQuery data structs. 
-*	Drive collaboration with sales, finance, and operations teams to define and implement measuring of company health and KPIs.
+*	Perform ad hoc analyses with SQL using a diverse range of data sets, including EDI dental claims data, card transaction data, sessionized customer event data from web and mobile apps, and bi-temporal ledger data. 
+*	Strategize cross-functionally with sales, finance, and operations teams to inform product roadmap through standing up core dashboards of key performance metrics, conducting quantitative analyses of pain points, and assembling qualitative findings based on interviews with stakeholders.
+*	Partner with engineering to design a new reporting architecture, including collecting system requirements from a data modeling perspective, determining user stories to inform test cases, and reviewing warehousing frameworks to ensure robust analytical capabilities.
+*	Develop and test dbt models for analytical use cases with dbt alerting for data health. Use Jinja macros to transform and document data stored as JSON blobs outputted from protobuf messages into BigQuery data structs. 
+*	Implement custom Python ETLs using Kubernetes to extract data from third party APIs for analysis in Jupyter notebooks (including developing risk rules through assessing statistical performance metrics of  risk-related features). 
 *	Led team in company-wide migration of data assets from Periscope to Looker, using LookML development to enable self-service analytics with engineers and non-technical stakeholders. Implemented trainings and office hours to familiarize teams with Looker for data-driven planning of team goals.
 *	Core member of the DEIB+ team, creating virtual events and resource guides to educate and celebrate diversity across Level and customers.
 
 #### Crossix, A Veeva Company | Senior Analyst, Marketing Analytics | June 2019 - January 2021
-* Own the end-to-end analysis of the effects of life sciences marketing on health behaviors by leveraging a comprehensive EHR, pharmacy, and claims data network through Crossix’s privacy-safe technology, SQL, and Apache Spark.
-* Responsible for reviewing project deliverables for newer analysts, as well as for providing guidance on technical, conceptual, and communication-related processes.
-* Lead the development of Spotfire visualization dashboards for internal deliverables, more efficient troubleshooting/bug-tracking workflows by founding a troubleshooting taskforce, and improved agile project management workflows (in JIRA).
-* Collaborate with marketing team members, analytical product developers, and product strategy directors to ingest, explore, and visualize data for industry thought leadership posts providing insight into the impact of COVID-19 on marketing trends.
+*	Owned over 30 end-to-end analyses that evaluated the impact of digital marketing on brand conversions, retention, and LTV. Queried and interpreted claims, EHR, and drug prescription data insights with SQL to communicate actionable and scalable campaign recommendations for marketing optimizations.
+*	Developed visualization dashboards, presented findings, and translated technical processes to stakeholders.
+*	Partnered with marketing, product, and client services teams to scope projects and visualize data for client workshops and industry blog posts that assess the impact of COVID-19 on marketing trends.
  
 ### Digital Health 
 
@@ -36,12 +36,20 @@ output:
 * Identified research questions, developed survey instruments, and coded data to explore social media advertising for marijuana vaporizer pens.
 * Supported the reviewing and editing of manuscripts for publication.
 
-### Skills + Publications
+### Skills
+*	Data analysis (A/B testing, data mining)
+*	Fluent in ETL pipelines and dimensional modeling 
+*	Expert in SQL (especially BigQuery)
+*	R (tidyverse, ggplot, flexdashboards)
+*	Python (pandas, numpy, seaborn, sklearn)
+*	Looker/LookML development
+*	Git/Github version control
+*	dbt development and testing
+*	Analytics engineering
 
-* Statistical Software: Experienced with SQL, R, Python, SAS
-* Computer: Experienced in Microsoft Word, Excel, and PowerPoint for both Mac and PC; Experienced with project management in JIRA and Confluence from the Atlassian product suite; proficient with web development (HTML5 and CSS) and Spotfire dashboard development
-* Research Experience: Experienced in conducting literature reviews, writing research proposals, and collecting and analyzing data
-* Peer-reviewed journal publications: *Giovenco, D.P., Spillane, T.E., Wong, B.A., Wackowski, O.A. (2019). Characteristics of storefront tobacco advertisements and differences by product type: A content analysis of retailers in New York City, USA. Preventive Medicine, 123, 204-207.*
+### Publications
+*	Spillane, T.E., Wong, B.A., Giovenco, D.P. (2020). Content analysis of instagram posts by leading cannabis vaporizer brands. Drug and Alcohol Dependence, https://doi.org/10.1016/j.drugalcdep.2020.108353
+*	Giovenco, D.P., Spillane, T.E., Wong, B.A., Wackowski, O.A. (2019). Characteristics of storefront tobacco advertisements and differences by product type: A content analysis of retailers in New York City, USA. Preventive Medicine, 123, 204-207.
 
 ### Education
 
@@ -64,11 +72,12 @@ output:
 *	Contributed to the writing of the overarching framework and helped generate an example of an application for the project (the iPhone). 
 *	Joined the 2020 discussions to help facilitate project management and next steps for future Collabathons.
 
+#### Datakind + Microsoft Virtual DataDive: Applying AI to Societal Challenges in US Cities | Miami Project | Oct. 2019
+*	Member of the Miami Project team, comprised of volunteer data scientists and data analysts in collaboration with the Code for Miami organization to implement AI in cities.
+* Engaged in exploratory data analysis using ggplot and tidyverse in R, as well as built/tested machine learning models using pandas and scikit-learn in Python. Also assisted with standing up an API for the project partner to understand the variables that impact turnaround time for applications to develop affordable housing. 
+
 #### Mount Sinai Health Hackathon 2019 | Team Blackbox AI | Oct. 2019
 *	Designed and created a website that uses video lessons, interactive statistical visualizations, and written descriptions to educate clinicians on the application and interpretation of artificial intelligence in healthcare settings.
 *	Brainstormed project execution and wrote HTML in Dash to create a functioning mock-up of the website (domain no longer active).
 
-#### Datakind + Microsoft Virtual DataDive: Applying AI to Societal Challenges in US Cities | Miami Project | Oct. 2019
-*	Member of the Miami Project team, comprised of volunteer data scientists and data analysts in collaboration with the Code for Miami organization to implement AI in cities.
-* Engaged in exploratory data analysis using ggplot and tidyverse in R, as well as built/tested machine learning models using pandas and scikit-learn in Python. Also assisted with standing up an API for the project partner to understand the variables that impact turnaround time for applications to develop affordable housing. 
 
